src/components/Menu/Menu.module.scss
.Menu {
    width: 100vw;

    position: fixed;
    top: 0;
    right: 0;

    button {
        background: none;
        border: none;
    }

    .MenuOpen {
        color: white;
        backdrop-filter: blur(25px);
        border-bottom: 7px solid white;
        border-left: 7px solid white;

        border-bottom-left-radius: 50px;
        text-align: center;
        font-size: 32px;
        font-family: Roboto, sans-serif;

        ul,
        li {
            margin-left: 0;
            padding-left: 0;
        }

        .MenuHeader {
            text-decoration: underline;
            list-style: none;
        }

        .MenuItem {
            margin: 32px 0;
            list-style: none;
            &:hover {
                color: red;
                cursor: pointer;
            }
        }

        .BookTableBtn {
            background-color: #79d1ca;
            border: none;
            border-radius: 12px;
            padding: 18px 28px 18px 33px;
            font-size: 24px;
            color: white;
            letter-spacing: 5px;
            margin-bottom: 50px;

            &:hover {
                cursor: pointer;
                text-decoration: underline;
                background-color: #afe3df;
            }

            &:active {
                cursor: pointer;
                text-decoration: none;
                background-color: rgba(112, 112, 112, 0.64);
            }
        }

        .ButtonWrapper {
            width: 100%;
            display: flex;
            justify-content: flex-end;

            .MenuLinesOpen {
                height: 50px;
                width: 50px;

                &:hover {
                    .LineOpen1,
                    .LineOpen2 {
                        background-color: red;
                    }
                }
                .LineOpen1,
                .LineOpen2 {
                    width: 50px;
                    height: 5px;
                    position: fixed;
                    top: 25px;
                    right: 5px;
                    background-color: black;
                }

                .LineOpen1 {
                    transform: rotate(45deg);
                }

                .LineOpen2 {
                    transform: rotate(-45deg);
                }
            }
        }
    }

    .MenuClosed {
        position: fixed;
        top: 15px;
        right: 15px;

        .MenuLinesClosed {
            width: 40px;
            height: 30px;

            .LinesContainerClosed {
                height: 100%;
                width: 100%;

                display: flex;
                flex-direction: column;
                justify-content: space-between;

                .LineClosed1,
                .LineClosed2,
                .LineClosed3 {
                    height: 5px;
                    width: 100%;
                    background-color: black;
                }
            }
        }
    }
}

@media (min-width: 480px) {
    .Menu {
        width: 280px;
    }
}

